player: fix 6s height overflow

--- a/source/templates/player/src/components/navMenu/style.sass
+++ b/source/templates/player/src/components/navMenu/style.sass
@@ -13,6 +13,9 @@ nav
     z-index: 99
     @media (min-height: 800px)
         max-width: 800px
+    @media (min-width: 480px)
+        flex-shrink: 0
+        min-height: 85px
     @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)
         flex-shrink: 0
         min-height: 85px
